# python_labs

./: .coverage  README.md  all  main.py  pyproject.toml
data/lab04/: a.txt  b.txt  input.txt  report.csv
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
data/samples/: cities.csv  example.txt  people.csv  people.json
lib/: funky_funcs.py
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  README.md  Task6.py  Task7.py
src/lab02/: README.md  arrays.py  matrix.py  tuples.py
src/lab03/: README.md  text_stats.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  demo.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  demo.py  init.py  models.py  serialize.py
src/lab09/: README.md  __init__.py  demo.py  group.py
src/lab10/: README.md  __init__.py  benchmarks.py  demo.py  linked_list.py  structures.py  test_interactive.py
src/lib/: io_helpers.py  text.py
tests/: test_json_csv.py  test_text.py
